--- a/it_modernization/postings.yaml
+++ b/it_modernization/postings.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Postings
   version: 1.0.0
-  generated: 2025-04-18
+  generated: 2025-04-19
 
 postings:
 
@@ -158,6 +158,15 @@ postings:
 
 - agency_id: DHS
   name: Edward Coristine
+  first_date: 2025-02-10
+  all_dates:
+  - 2025-02-10
+  last_date: 2025-02-10
+  doge_agency_first: 2025-02-10
+  doge_agency_last: 2025-03-11
+
+- agency_id: DHS
+  name: Kyle Schutt
   first_date: 2025-02-10
   all_dates:
   - 2025-02-10
@@ -607,6 +616,7 @@ postings:
   first_date: 2025-01-28
   all_dates:
   - 2025-01-28
+  - 2025-02-24
   - 2025-03-07
   - 2025-03-28
   last_date: 2025-03-28
@@ -627,6 +637,8 @@ postings:
   first_date: 2025-02-24
   all_dates:
   - 2025-02-24
+  - 2025-02-27
+  - 2025-03-27
   - 2025-03-29
   last_date: 2025-03-29
   onboard_date: 2025-02-24
@@ -635,8 +647,9 @@ postings:
 
 - agency_id: DOI
   name: Katrine Trampe
-  first_date: 2025-03-29
+  first_date: 2025-02-24
   all_dates:
+  - 2025-02-24
   - 2025-03-29
   last_date: 2025-03-29
   doge_agency_first: 2025-01-28
@@ -1366,11 +1379,14 @@ postings:
   first_date: 2025-02-19
   all_dates:
   - 2025-02-19
+  - 2025-02-20
   - 2025-02-28
   - 2025-04-05
-  last_date: 2025-04-05
+  - 2025-04-18
+  last_date: 2025-04-18
+  offboard_date: 2025-04-18
   doge_agency_first: 2025-02-19
-  doge_agency_last: 2025-04-10
+  doge_agency_last: 2025-04-18
 
 - agency_id: IRS
   name: Sam Corcos
@@ -1382,7 +1398,27 @@ postings:
   - 2025-04-10
   last_date: 2025-04-10
   doge_agency_first: 2025-02-19
-  doge_agency_last: 2025-04-10
+  doge_agency_last: 2025-04-18
+
+- agency_id: IRS
+  name: Payton Rehling
+  first_date: 2025-04-15
+  all_dates:
+  - 2025-04-15
+  last_date: 2025-04-15
+  onboard_date: 2025-04-15
+  doge_agency_first: 2025-02-19
+  doge_agency_last: 2025-04-18
+
+- agency_id: IRS
+  name: Jon Koval
+  first_date: 2025-04-15
+  all_dates:
+  - 2025-04-15
+  last_date: 2025-04-15
+  onboard_date: 2025-04-15
+  doge_agency_first: 2025-02-19
+  doge_agency_last: 2025-04-18
 
 - agency_id: NASA
   name: Scott Coulter
