--- a/it_modernization/raw_data/systems.yaml
+++ b/it_modernization/raw_data/systems.yaml
@@ -421,16 +421,20 @@
 - name: National Farmworker Jobs Program
   id: NFJP
   link: https://www.dol.gov/agencies/eta/agriculture
-  description: FIXME
+  sorn: https://www.federalregister.gov/documents/2016/04/29/2016-09510/privacy-act-of-1974-publication-in-full-of-all-notices-of-systems-of-records-including-several-new
+  description: The National Farmworker Jobs Program (NFJP) is a nationally-directed, locally-administered program of services for migrant and seasonal farmworkers and their dependents
   agency: DOL
 
 - name: Foreign Labor Application Gateway
   id: FLAG
-  description: FIXME
+  link: https://flag.dol.gov/
+  sorn: https://www.federalregister.gov/documents/2022/02/14/2022-03063/privacy-act-of-1974-system-of-records
+  description: This newly-modernized portal will help U.S. employers find qualified workers while ensuring protections for U.S. and foreign workers.
   agency: DOL
 
 - name: Reentry Employment Opportunities
   id: REO
-  description: FIXME
+  description: The Reentry Employment Opportunities (REO) program provides funding, authorized as Research and Evaluation under Section 169 of the Workforce Innovation and Opportunity Act (WIOA) of 2014, for justice-involved youth and young adults and adults who were formerly incarcerated.
+  pia: https://www.dol.gov/agencies/oasam/centers-offices/ocio/privacy/eta/reo
   link: https://www.dol.gov/agencies/eta/reentry
   agency: DOL
